--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Sonar native packages</title>
+<title>Silverpeas native packages</title>
 <link rel="icon" type="image/png" href="favicon.ico" />
 <style>
   h2 { border-bottom: 1px solid black }
@@ -20,13 +20,13 @@
 </head>
 <body>
 
-<a href="http://github.com/Godin/sonar-native-packages"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub" /></a>
+<a href="http://github.com/ehsavoie/silverpeas-native-packages"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub" /></a>
 
-<h1>Sonar native packages</h1>
+<h1>Silverpeas native packages</h1>
 
-Those packages install standalone version of <a href="http://sonarsource.org">Sonar</a> into "/opt/sonar" and provide init script, so it can be launched as:
+Those packages install standalone version of <a href="http://www.silverpeas.org">Silverpeas</a> into "/opt/silverpeas" and provide init script, so it can be launched as:
 <pre>
-/etc/init.d/sonar start
+/etc/init.d/silverpeas start
 </pre>
 
 <h2>Debian-based Linux distributions such as Ubuntu</h2>
@@ -35,13 +35,13 @@ Those packages install standalone version of <a href="http://sonarsource.org">So
 
 Add the following entry in your /etc/apt/sources.list :
 <pre>
-deb http://downloads.sourceforge.net/project/sonar-pkg/deb binary/
+deb http://www.silverpeas.org/files/deb binary/
 </pre>
 
-Update your local package index and install Sonar:
+Update your local package index and install Silverpeas:
 <pre>
 sudo apt-get update
-sudo apt-get install sonar
+sudo apt-get install silverpeas
 </pre>
 
 <h2>RPM-based Linux distributions such as RedHat, Fedora, CentOS, openSUSE</h2>
@@ -50,36 +50,25 @@ sudo apt-get install sonar
 
 Add repository:
 <pre>
-sudo wget -O /etc/yum.repos.d/sonar.repo http://downloads.sourceforge.net/project/sonar-pkg/rpm/sonar.repo
+sudo wget -O /etc/yum.repos.d/silverpeas.repo http://www.silverpeas.org/files/rpm/silverpeas.repo
 </pre>
 
-Install Sonar:
+Install Silverpeas:
 <pre>
-yum install sonar
+yum install silverpeas
 </pre>
 
 <h3>Zypper</h3>
 
 Add repository:
 <pre>
-zypper addrepo http://downloads.sourceforge.net/project/sonar-pkg/rpm sonar
+zypper addrepo http://www.silverpeas.org/files/rpm silverpeas
 </pre>
 
-Install Sonar:
+Install Silverpeas:
 <pre>
-zypper install sonar
+zypper install silverpeas
 </pre>
-
-<h2>Homebrew for MacOS X</h2>
-
-Install <a href="http://mxcl.github.com/homebrew/">Homebrew</a>, then install Sonar:
-<pre>
-brew install sonar
-</pre>
-
-<h2>Gentoo</h2>
-
-See <a href="http://code.google.com/p/godin-gentoo-repository/wiki/Sonar">godin-gentoo-repository</a>
 
 </body>
 </html>
