--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@ Those packages install standalone version of <a href="http://www.silverpeas.org"
 
 Add the following entry in your /etc/apt/sources.list :
 <pre>
-deb http://www.silverpeas.org/files/deb binary/
+deb http://www.silverpeas.org/repo/deb binary/
 </pre>
 
 Update your local package index and install Silverpeas:
@@ -50,7 +50,7 @@ sudo apt-get install silverpeas
 
 Add repository:
 <pre>
-sudo wget -O /etc/yum.repos.d/silverpeas.repo http://www.silverpeas.org/files/rpm/silverpeas.repo
+sudo wget -O /etc/yum.repos.d/silverpeas.repo http://www.silverpeas.org/repo/rpm/silverpeas.repo
 </pre>
 
 Install Silverpeas:
@@ -62,7 +62,7 @@ yum install silverpeas
 
 Add repository:
 <pre>
-zypper addrepo http://www.silverpeas.org/files/rpm silverpeas
+zypper addrepo http://www.silverpeas.org/repo/rpm silverpeas
 </pre>
 
 Install Silverpeas:
