Updating index page with better look

--- a/site/index.html
+++ b/site/index.html
@@ -77,8 +77,7 @@
               <p>Update your local package index and install Silverpeas:  
               </p><div class="source"><pre class="prettyprint linenums">
 sudo apt-get update
-sudo apt-get install silverpeas
-                </pre></div>
+sudo apt-get install silverpeas</pre></div>
             </div>
           </div>
           <div class="section"><h2>RPM-based Linux distributions such as RedHat, Fedora, CentOS, openSUSE<a name="RPM-based_Linux_distributions_such_as_RedHat_Fedora_CentOS_openSUSE"></a></h2>
@@ -86,14 +85,12 @@ sudo apt-get install silverpeas
               <p>Add repository: </p><div class="source"><pre class="prettyprint linenums">sudo wget -O /etc/yum.repos.d/silverpeas.repo http://www.silverpeas.org/repo/rpm/silverpeas.repo</pre></div>
               <p>Install Silverpeas: 
               </p><div class="source"><pre class="prettyprint linenums">
-yum install silverpeas
-                </pre></div>
+yum install silverpeas</pre></div>
             </div><div class="section"><h3>Zypper<a name="Zypper"></a></h3>
               <p>Add repository: </p><div class="source"><pre class="prettyprint linenums">zypper addrepo http://www.silverpeas.org/repo/rpm silverpeas</pre></div>
               <p>Install Silverpeas: 
               </p><div class="source"><pre class="prettyprint linenums">
-zypper install silverpeas
-                </pre></div>
+zypper install silverpeas</pre></div>
             </div>
           </div> 
         </div>
