Adding how to start silverpeas daemon with the service command

--- a/site/index.html
+++ b/site/index.html
@@ -69,7 +69,7 @@
             <p>Those packages install standalone version of 
               <a class="externalLink" href="http://www.silverpeas.org">Silverpeas</a> into <b>&quot;/opt/silverpeas&quot;</b> and provide init script, so it can be launched as: 
             </p><div class="source"><pre class="prettyprint linenums">/etc/init.d/silverpeas start</pre></div>
-
+            <p>or: </p><div class="source"><pre class="prettyprint linenums">service silverpeas start</pre></div>
           </div>
           <div class="section"><h2>Debian-based Linux distributions such as Ubuntu<a name="Debian-based_Linux_distributions_such_as_Ubuntu"></a></h2>
             <div class="section"><h3>APT<a name="APT"></a></h3>
