Change the RPM installation/uninstallation spec to take in charge both RHEL 5.8 and 6.3, CentOS 5.8 and 6.3, and Fedora 17 GNU/Linux distribution. The build scripts are also updated to take into account the package release as optional argument and the RPM repo dedicated to each supported RPM-based distribution.

--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
- <!-- Copyright (C) 2000 - 2011 Silverpeas
+ <!-- Copyright (C) 2000 - 2012 Silverpeas
 
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU Affero General Public License as
@@ -11,7 +11,7 @@
   Open Source Software ("FLOSS") applications as described in Silverpeas's
   FLOSS exception.  You should have recieved a copy of the text describing
   the FLOSS exception, and it is also available here:
-  "http://www.silverpeas.com/legal/licensing"
+  "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
 
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -71,9 +71,9 @@
 /etc/init.d/silverpeas start</pre></div>
             <p>or: </p><div class="source"><pre class="prettyprint">
 service silverpeas start</pre></div>
-            <p>Since Silverpeas depends on <b>Postgresql</b> the installation will also install Postgresql server on your machine.<br />But installing Postgresql <b>may require some manual steps</b>:  you will find more documentation <a href="http://wiki.postgresql.org/wiki/Detailed_installation_guides" >here</a>.</p>
+            <p>Since Silverpeas depends on <b>PostgreSQL</b> the installation will also install the PostgreSQL database system on your machine and it will setup it for Silverpeas. In the case the PostgreSQL setting for Silverpeas failed, you can do it manually by following the steps as described in the <a href="http://wiki.postgresql.org/wiki/Detailed_installation_guides" >documentation here</a>.</p>
           </div>
-          <div class="section"><h2>Debian-based Linux distributions such as Ubuntu<a name="Debian-based_Linux_distributions_such_as_Ubuntu"></a></h2>
+          <div class="section"><h2>Debian-based GNU/Linux distributions<a name="Debian-based_Linux_distributions"></a></h2>
             <div class="section"><h3>APT<a name="APT"></a></h3>
               <p>Add the following entry in your <i>/etc/apt/sources.list</i>: </p><div class="source"><pre class="prettyprint linenums">deb http://www.silverpeas.org/repo/deb binary/</pre></div>
               <p>Update your local package index and install Silverpeas:  
@@ -82,17 +82,23 @@ sudo apt-get update
 sudo apt-get install silverpeas</pre></div>
             </div>
           </div>
-          <div class="section"><h2>RPM-based Linux distributions such as RedHat, Fedora, CentOS, openSUSE<a name="RPM-based_Linux_distributions_such_as_RedHat_Fedora_CentOS_openSUSE"></a></h2>            
-            <div class="section"><h3>YUM<a name="YUM"></a></h3>
-              <p>Add repository: </p><div class="source"><pre class="prettyprint linenums">sudo wget -O /etc/yum.repos.d/silverpeas.repo http://www.silverpeas.org/repo/rpm/silverpeas.repo</pre></div>
+          <div class="section"><h2>RPM-based GNU/Linux distributions: RedHat, CentOS, and Fedora<a name="RPM-based_Linux_distributions"></a></h2>
+            <p>Silverpeas requires the latest Java 1.6.0 to run; it doesn't support yet Java 1.7.0. As in recent RPM-based GNU/Linux distribution, it is no longer provided, it is no more defined as a requirement in the Silverpeas RPM. Thus, you have to download it from the <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk6u35-downloads-1836443.html">Oracle website</a> and manually install it on your system. Once done, check the output of the command:
+            <div class="source"><pre class="prettyprint">java -version</pre></div>
+            If the current version isn't of type 1.6.0, then the java alternative wasn't set by the java installation and you have to do it also manually. For example:
+            <div class="source"><pre class="prettyprint">update-alternatives --install /usr/bin/java java /usr/java/jdk1.6.0_35/bin/java 20000</pre></div>
+            <div class="section"><h3>RHEL 5.8 and CentOS 5.8<a name="RHEL_5"></a></h3>
+              <p>Add repository: </p><div class="source"><pre class="prettyprint linenums">sudo wget -O /etc/yum.repos.d/silverpeas.repo http://www.silverpeas.org/repo/rpm/rhel/5.x/silverpeas.repo</pre></div>
               <p>Install Silverpeas: 
-              </p><div class="source"><pre class="prettyprint">
-yum install silverpeas</pre></div>
-            </div><div class="section"><h3>Zypper<a name="Zypper"></a></h3>
-              <p>Add repository: </p><div class="source"><pre class="prettyprint">zypper addrepo http://www.silverpeas.org/repo/rpm silverpeas</pre></div>
+              </p><div class="source"><pre class="prettyprint">yum install silverpeas</pre></div>
+            <div class="section"><h3>RHEL 6.3 and CentOS 6.3<a name="RHEL_6"></a></h3>
+              <p>Add repository: </p><div class="source"><pre class="prettyprint linenums">sudo wget -O /etc/yum.repos.d/silverpeas.repo http://www.silverpeas.org/repo/rpm/rhel/6.x/silverpeas.repo</pre></div>
               <p>Install Silverpeas: 
-              </p><div class="source"><pre class="prettyprint ">
-zypper install silverpeas</pre></div>
+              </p><div class="source"><pre class="prettyprint">yum install silverpeas</pre></div>
+            <div class="section"><h3>Fedora 17<a name="Fedora"></a></h3>
+              <p>Add repository: </p><div class="source"><pre class="prettyprint linenums">sudo wget -O /etc/yum.repos.d/silverpeas.repo http://www.silverpeas.org/repo/rpm/fedora/17/silverpeas.repo</pre></div>
+              <p>Install Silverpeas: 
+              </p><div class="source"><pre class="prettyprint">yum install silverpeas</pre></div>
             </div>
           </div> 
         </div>
